...
                        }
                    }
                }
            }
            Spacer()
            // toggle a sheet through the button
            Button(action: {self.showAddMedicationView.toggle()}) { Text("Add Medication") }
                .font(.headline)
                .foregroundColor(.white)
                .padding()
                .background(Color.blue)
                .cornerRadius(10)
        }
...
