...
                Spacer()
                NavigationLink(
                    destination: {
                        AddPatientView(patientList: patientList)
                    },
                    label: {
                        Text("Add Patient")
                            .font(.headline)
                            .foregroundColor(.white)
                            .padding()
                            .background(Color.blue)
                            .cornerRadius(10)
                    }
...
